css/style.css
/* ... */
/* Checked styles */
[type="radio"]:checked + label:before { border: 2px solid #43a047; }

[type="radio"]:not(:checked) + label:after {
  z-index: -1;
  border: 2px solid #5a5a5a;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  -o-transform: scale(0);
  transform: scale(0);
}

[type="radio"]:checked + label:after {
  z-index: -1;
  background-color: #43a047;
  border: 2px solid #43a047;
  -webkit-transform: scale(.9);
  -moz-transform: scale(.9);
  -ms-transform: scale(.9);
  -o-transform: scale(.9);
  transform: scale(.9);
}

/* Disabled style */
[type="radio"]:disabled:not(:checked) + label:before,
[type="radio"]:disabled:checked + label:before {
  background-color: rgba(0,0,0,.2);
  border-color: rgba(0,0,0,.26);
}

[type="radio"]:disabled + label {
  cursor: default;
  color: #666;
}

[type="radio"]:disabled:not(:checked) + label:before { border-color: rgba(0,0,0,.26); }

[type="radio"]:disabled:checked + label:after {
  background-color: rgba(0,0,0,.26);
  border-color: #bdbdbd;
}

html,
body {
  font-family: 'Roboto';
  font-weight: 400;
}

.light { font-weight: 300; }

.flex-center {
  display: flex;
  align-items: center;
}

.flex-center.column { flex-direction: column; }

.semi-bold { font-weight: 500; }

.no-padding { padding: 0; }

.no-overflow-x { overflow-x: hidden; }

.no-mtop { margin-top: -2rem !important; }

.no-mbot { margin-bottom: 0; }

.text-black { color: #000; }

.text-grey { color: #333 !important; }

.text-light-grey { color: #888; }

.off-white-bg { background-color: #eee; }

.affix {
  top: 23px;
  z-index: 10;
}

.affix.gallery {
  top: 19px;
  height: 66px;
}

.quote-align {
  position: relative;
  left: 50%;
  font-weight: 300;
}

.quote-align small {
  position: relative;
  left: 32%;
}

.quote-align h1 { font-size: 24px; }

.quote-align.less { left: 10%; }

.text-white { color: #fff; }

.bg-black { background-color: #000; }

.bg-grey { background-color: #474747; }

.strip-shade {
  height: 32px;
  background: url(../images/hatch-bg.png);
}

.strip-shade.top { height: 36px; }

.strip-shade h1 {
  display: inline-block;
  margin-top: -1px;
  margin-left: 16%;
  font-family: 'Square721 BT Bold';
  color: #767676;
  transform: scale(1.1,.6);
}

.transparent-bg {
  background-color: rgba(255,255,255,.3);
  box-shadow: 0 0 12px -3px #000;
}

.icon-bar { background-color: #000; }

.logo-pos {
  max-width: 67px;
  margin-top: -20px;
}

.navbar-toggle { padding: 4px 0; }

.navbar-custom > li > a {
  font-size: 20px;
  color: #333;
  text-shadow: none;
  transition: background 400ms ease;
}

.navbar-custom > li.active > a:before,
.navbar-custom > li > a:before {
  position: absolute;
  bottom: 0;
  left: 0;
  display: block;
  width: 0;
  height: 5px;
  content: '';
  transition: width 0 ease, background 400ms ease;
}

.navbar-custom > li.active > a:after,
.navbar-custom > li > a:after {
  position: absolute;
  right: 0;
  bottom: 0;
  display: block;
  width: 0;
  height: 5px;
  background: #e00000;
  content: '';
  transition: width 400ms ease;
}
.navbar-custom > li.active > a:before,
.navbar-custom > li > a:focus:before,
.navbar-custom > li > a:hover:before {
    width: 100%;
    background: #e00000;
    transition: width 400ms ease;
}
.navbar-custom > li.active > a:after,
.navbar-custom > li > a:focus:after,
.navbar-custom > li > a:hover:after {
    width: 100%;
    background: transparent;
    transition: all 0 ease;
}

.navbar-custom > li.active > a,
.navbar-custom > li > a:focus,
.navbar-custom > li > a:hover,
.confirm-book {
  color: #fff;
  background-color: #8d0000;
  transition: all 400ms ease;
}
.confirm-book:hover {
  color: #fff;
  background-color: #af0000;
}

#top-carousel .carousel-inner img { margin: 28px auto 0; }

.carousel-indicators.custom li {
  z-index: 2;
  width: 15px;
  height: 15px;
  margin: 1px 6px;
  background-color: #333;
  border: none;
  opacity: .7;
}

.carousel-indicators.custom li:hover { opacity: .9; }

.carousel-indicators.custom .active {
  width: 16px;
  height: 16px;
  margin: 0 6px;
  background-color: #fff;
  border: 5px solid #333;
  opacity: .6;
  transition: all 200ms;
}

.icon-prev.less { left: 30%; }

.icon-next.less { right: 30%; }

.btn.book-now {
  position: absolute;
  top: 46.5%;
  right: 12%;
  z-index: 2;
  color: #fff;
  background-color: rgba(0,0,0,.6);
  transition: color 300ms ease-in, background-color 300ms ease-in;
}

.btn.book-now:focus { outline: none; }

.btn.book-now:hover {
  color: #333;
  background-color: #ccc;
  text-decoration: none;
  outline: none;
}

.radio-bot { margin: 1.4rem 15px; }

.custom-underline {
  line-height: 1.5;
  color: #000;
  background: url(../images/heading-underline.png) no-repeat 50% 100%;
}

.custom-underline.white {
  color: #fff;
  background: url(../images/heading-underline-white.png) no-repeat 50% 100%;
}

.content-text {
  margin: 25px auto;
  font-size: 20px;
  text-align: center;
}

.radicality-bg {
  background: #fff url(../images/white-hatch-bg.png) no-repeat center;
  background-size: cover;
}

.radicality-bg p {
  margin: 15px auto;
  font-size: 20px;
}

.radicality-bg .text-grey {
  font-size: 16px;
  text-decoration: none !important;
  border-bottom: 1px solid #333;
}

.highlights-box .img-responsive { border-radius: 3px; }

.highlights-box.left {
  padding: 10px 0;
  margin-right: 4px;
}

.highlights-box.left .white-triangle {
  position: absolute;
  top: 10px;
  left: 0;
  border-left: 6.5rem solid #fff;
  border-bottom: 11.5rem solid transparent;
}

.highlights-box.right .white-triangle {
  position: absolute;
  right: 0;
  bottom: 0;
  border-right: 6.5rem solid #fff;
  border-top: 11.5rem solid transparent;
}

.highlights-box .carousel-caption {
  bottom: 0;
  padding: 0;
  color: #fff;
}

.highlights-box.left .carousel-caption {
  right: 12px;
  left: 0;
}

.highlights-box.right .carousel-caption {
  right: 0;
  left: 12px;
}
/* ... */

